# Desafio2

./: Informe_de_Responsabilidades.docx  Sistema de Gestion y Produccion de Contenido musical.docx  informe preliminar desafio 2.docx
clases/: CMakeLists.txt  album.cpp  album.h  anuncios.cpp  anuncios.h  artista.cpp  artista.h  cancion.cpp  cancion.h  main.cpp  menu.cpp  menu.h  metricas.h  precarga.cpp  precarga.h  usuario.cpp  usuario.h
clasesDePrueba/: CMakeLists.txt  album.cpp  artista.cpp  artista.h  cancion.cpp  cancion.h  main.cpp  metricas.cpp  precarga.cpp
publicidad_y_usuario/: CMakeLists.txt  anuncios.cpp  anuncios.h  main.cpp
